# feattle-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  README.tpl  release.sh  update_readmes.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
feattle/: Cargo.toml  README.md
feattle-core/: Cargo.toml  README.md
feattle-core/src/: __deps.rs  __internal.rs  definition.rs  deps.rs  feattle_value.rs  json_reading.rs  last_reload.rs  lib.rs  macros.rs  models.rs  persist.rs
feattle-sync/: Cargo.toml  README.md
feattle-sync/src/: aws_sdk_s3.rs  background_sync.rs  disk.rs  lib.rs  models.rs  persist.rs  rusoto_s3.rs  s3.rs
feattle-ui/: Cargo.toml  README.md
feattle-ui/src/: api.rs  axum_ui.rs  lib.rs  pages.rs  warp_ui.rs
feattle-ui/web/: feattle.hbs  feattles.hbs  feature.hbs  features.hbs  gui.html  layout.hbs  script.js  style.css
feattle-ui/web/public/: feature.html  index.html
feattle/examples/: full.rs  gui.rs
feattle/src/: lib.rs
src/: feattle_value.rs  main.rs  reflection.rs  try_from_value.rs
