[package]
name = "feattle"
version = "0.1.0"
authors = ["Guilherme Souza <19gui94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.7.2"
log = "0.4.11"
parking_lot = "0.11.0"
serde = "1.0.115"
serde_json = "1.0.57"
strum = "0.19.2"
strum_macros = "0.19.2"
uuid = "0.8.1"