[package]
name = "feattle-core"
version = "0.1.0"
authors = ["Guilherme Souza <19gui94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
parking_lot = "0.11.0"
serde_json = "1.0.57"
strum = "0.19.2"
strum_macros = "0.19.2"
uuid = { version = "0.8.1", optional = true }