[package]
name = "feattle-core"
version = "0.6.0"
authors = ["Guilherme Souza <sitegui@sitegui.com.br>"]
edition = "2018"
description = "Featture toggles for Rust, extensible and with background synchronization and administration UI"
repository = "https://github.com/sitegui/feattle-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["toggle", "feature", "flag", "flipper"]
categories = ["config", "data-structures", "development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
chrono = { version = "0.4.15", features = ["serde"] }
log = "0.4.11"
parking_lot = "0.11.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
uuid = { version = "0.8.1", optional = true }

[dev-dependencies]
tokio = { version = "1.4.0", features = ["macros", "rt"] }

[package.metadata.docs.rs]
all-features = true
