[package]
name = "feattle-sync"
version = "0.6.0"
authors = ["Guilherme Souza <sitegui@sitegui.com.br>"]
edition = "2018"
description = "Featture toggles for Rust, extensible and with background synchronization and administration UI"
repository = "https://github.com/sitegui/feattle-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["toggle", "feature", "flag", "flipper"]
categories = ["config", "data-structures", "development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
s3 = ["rusoto_core", "rusoto_s3"]

[dependencies]
async-trait = "0.1.40"
feattle-core = { path = "../feattle-core", version = "0.6.0" }
log = "0.4.11"
rusoto_core = { version = "0.46.0", optional = true }
rusoto_s3 = { version = "0.46.0", optional = true }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio = { version = "1.4.0", features = ["time", "fs", "io-util"] }

[dev-dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
dotenv = "0.15.0"
parking_lot = "0.11.0"
tempfile = "3.1.0"
tokio = { version = "1.4.0", features = ["macros", "rt", "test-util"] }

[package.metadata.docs.rs]
all-features = true
