[package]
name = "feattle-sync"
version = "2.0.1"
authors = ["Guilherme Souza <sitegui@sitegui.com.br>"]
edition = "2021"
rust-version = "1.76.0"
description = "Featture toggles for Rust, extensible and with background synchronization and administration UI"
repository = "https://github.com/sitegui/feattle-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["toggle", "feature", "flag", "flipper"]
categories = ["config", "data-structures", "development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rusoto_s3 = ["dep:rusoto_core", "dep:rusoto_s3"]
aws_sdk_s3 = ["dep:aws-types", "dep:aws-sdk-s3"]

[dependencies]
async-trait = "0.1.40"
aws-sdk-s3 = { version = "1.38.0", optional = true }
aws-types = { version = "1.3.2", optional = true }
feattle-core = { path = "../feattle-core", version = "2.0.1" }
log = "0.4.11"
rusoto_core = { version = "0.48.0", optional = true }
rusoto_s3 = { version = "0.48.0", optional = true }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "2.0.12"
tokio = { version = "1.4.0", features = ["time", "fs", "io-util", "rt"] }

[dev-dependencies]
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
chrono = { version = "0.4.15", features = ["serde"] }
dotenv = "0.15.0"
parking_lot = "0.12.0"
tempfile = "3.1.0"
tokio = { version = "1.4.0", features = ["macros", "rt", "test-util"] }

[package.metadata.docs.rs]
all-features = true
