[package]
name = "feattle-ui"
version = "0.7.0"
authors = ["Guilherme Souza <sitegui@sitegui.com.br>"]
edition = "2018"
description = "Featture toggles for Rust, extensible and with background synchronization and administration UI"
repository = "https://github.com/sitegui/feattle-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["toggle", "feature", "flag", "flipper"]
categories = ["config", "data-structures", "development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
feattle-core = { path = "../feattle-core", version = "0.7.0" }
futures = "0.3.5"
handlebars = "4.1.2"
log = "0.4.11"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
warp = { version = "0.3.0", optional = true }

[dev-dependencies]
tokio = { version = "1.4.0", features = ["macros", "rt"] }

[package.metadata.docs.rs]
all-features = true
