[package]
name = "feattle-ui"
version = "3.0.0"
authors = ["Guilherme Souza <sitegui@sitegui.com.br>"]
edition = "2021"
rust-version = "1.76.0"
description = "Featture toggles for Rust, extensible and with background synchronization and administration UI"
repository = "https://github.com/sitegui/feattle-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["toggle", "feature", "flag", "flipper"]
categories = ["config", "data-structures", "development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", optional = true, default-features = false, features = ["form", "json"] }
chrono = { version = "0.4.15", features = ["serde"] }
feattle-core = { path = "../feattle-core", version = "2.0.1" }
handlebars = "6.3.1"
log = "0.4.11"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "2.0.12"
warp = { version = "0.3.0", optional = true }

[dev-dependencies]
axum = { version = "0.8.1", features = ["tokio"] }
tokio = { version = "1.4.0", features = ["macros", "rt"] }

[package.metadata.docs.rs]
all-features = true
