[package]
name = "feattle"
version = "0.2.5"
authors = ["Guilherme Souza <sitegui@sitegui.com.br>"]
edition = "2018"
description = "Featture toggles for Rust, extensible and with background synchronization and administration UI"
repository = "https://github.com/sitegui/feattle-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["toggle", "feature", "flag", "flipper"]
categories = ["config", "data-structures", "development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
s3 = ["feattle-sync/s3"]
uuid = ["feattle-core/uuid"]
warp = ["feattle-ui/warp"]

[dependencies]
feattle-core = { path = "../feattle-core", version = "0.2.5" }
feattle-sync = { path = "../feattle-sync", version = "0.2.4" }
feattle-ui = { path = "../feattle-ui", version = "0.2.5" }

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.7.1"
rusoto_core = { version = "0.45.0" }
rusoto_s3 = { version = "0.45.0" }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
uuid_original = { package = "uuid", version = "0.8.1" }
warp_original = { package = "warp", version = "0.2.4" }
tokio = { version = "0.2.22", features = ["full"] }

[[example]]
name = "full"
path = "examples/full.rs"
required-features = ["s3", "uuid", "warp"]
