[package]
name = "feattle"
version = "1.0.0"
authors = ["Guilherme Souza <sitegui@sitegui.com.br>"]
edition = "2018"
description = "Featture toggles for Rust, extensible and with background synchronization and administration UI"
repository = "https://github.com/sitegui/feattle-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["toggle", "feature", "flag", "flipper"]
categories = ["config", "data-structures", "development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
aws_sdk_s3 = ["feattle-sync/aws_sdk_s3"]
axum = ["feattle-ui/axum"]
rusoto_s3 = ["feattle-sync/rusoto_s3"]
uuid = ["feattle-core/uuid"]
warp = ["feattle-ui/warp"]

[dependencies]
feattle-core = { path = "../feattle-core", version = "1.0.0" }
feattle-sync = { path = "../feattle-sync", version = "1.0.0" }
feattle-ui = { path = "../feattle-ui", version = "1.0.0" }

[dev-dependencies]
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
axum = { version = "0.7.5", features = ["tokio"] }
chrono = { version = "0.4.15", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
rusoto_core = { version = "0.48.0" }
rusoto_s3 = { version = "0.48.0" }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1.4.0", features = ["full"] }
uuid = "1.1.2"
warp = "0.3.0"

[[example]]
name = "full"
path = "examples/full.rs"
required-features = ["rusoto_s3", "aws_sdk_s3", "uuid", "warp", "axum"]
